<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/size16dp">

    <TableRow
        android:layout_marginTop="@dimen/size16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/size10dp"
            android:gravity="right"
            android:text="@string/set1_1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/set1_2"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/size16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/size10dp"
            android:gravity="right"
            android:text="@string/set2_1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/set2_2"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/size16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/size10dp"
            android:gravity="right"
            android:text="@string/set3_1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/set3_2"/>
    </TableRow>

</TableLayout>
